sonar scan issue fixes